# FFQ

./: .gitignore  FFQ data entry (version 1).xlsb  README.md  start.sh
backend/: composite.tsv  food_stats.json  food_stats_csv_to_json.py  main.py  portions.json  portions.tsv  process_portions_csv.py  processes_before_download.py  pyproject.toml  ultraprocessed_foods.json
backend/data/: P001_FFQ.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
